--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <aside class="sidebar">
       <div class="profile">
         <img
-          src="https://scontent.fktm3-1.fna.fbcdn.net/v/t39.30808-6/474378960_8998638920243093_8230676208109053508_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=jP1htc1IjlcQ7kNvwGzm_gc&_nc_oc=Adlwn33-_Q_3VQlFg4S7KK7m51zMv6kj6daiX9Yi5TNbfhaMy8iveBDbGNI6AEAhrEnc3doKmcf8aDaYl6OH4hZH&_nc_zt=23&_nc_ht=scontent.fktm3-1.fna&_nc_gid=UlQH2zQkee2RQn5YZFND7A&oh=00_AfOQiyH2TJxKvLWh0tAvK_Evh3R4aPtFrlJTQrKGA0KAyQ&oe=684C9413"
+          src="https://media.licdn.com/dms/image/v2/D4D03AQHLNtkOsWQEIQ/profile-displayphoto-crop_800_800/B4DZe5dljyGYAI-/0/1751163232208?e=1758153600&v=beta&t=5Wgh4DinY-Rgb0bveFD4JzSEGaFO5QJcMU5YJfzazlE"
           alt="Ang Lakpa Sherpa">
       </div>
 
