--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
             
           </div>
 
-          <div>
+          <!-- <div>
             <form>
               <div class="form-row">
                 <div class="form-group">
@@ -891,7 +891,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
               <button type="submit" class="btn">Send Message <i class="fas fa-paper-plane"></i></button>
             </form>
           </div>
-        </div>
+        </div> -->
       </section>
     </main>
 
