--- a/index.html
+++ b/index.html
@@ -846,8 +846,8 @@ Explored modern design styles and trends. Tried out components like dark mode, n
         </div>
       </section> -->
 
-      <!-- Contact Section -->
-      <section id="Contact" class="section">
+           <!-- Contact Section -->
+     <!-- <section id="Contact" class="section">
         <div class="contact-container">
           <div>
             <div class="section-label">GET IN TOUCH</div>
@@ -864,7 +864,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
             
           </div>
 
-          <!-- <div>
+         <div>
             <form>
               <div class="form-row">
                 <div class="form-group">
