--- a/index.html
+++ b/index.html
@@ -637,7 +637,12 @@
           A personal portfolio is a collection of your work, achievements, and skills that highlights your abilities and
           professional growth. It serves as a visual representation of your journey and expertise.
         </p>
-        <button class="btn">View Portfolio <i class="fas fa-arrow-right"></i></button>
+        <a href="https://www.behance.net/anglakpasherpa" target="_blank">
+  <button class="btn">
+    View Portfolio <i class="fas fa-arrow-right"></i>
+  </button>
+</a>
+
       </section>
 
       <!-- Features Section -->
