--- a/index.html
+++ b/index.html
@@ -694,31 +694,31 @@ Explored modern design styles and trends. Tried out components like dark mode, n
 
           <div class="portfolio-item">
             <img
-              src="https://images.unsplash.com/photo-1547658719-da2b51169166?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80"
+              src="myportfolio/ecommerce.jpg"
               alt="UI Design Project">
             <div class="portfolio-info">
-              <h3>UI Design System</h3>
-              <p>Design & Development</p>
+              <h3>UI Design of E-commerce mobile and Desktop</h3>
+              <p>Design</p>
             </div>
           </div>
 
           <div class="portfolio-item">
             <img
-              src="https://images.unsplash.com/photo-1586717791821-3f44a563fa4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80"
+              src="myportfolio/News app copy.jpg"
               alt="Mobile App Project">
             <div class="portfolio-info">
-              <h3>Mobile Banking App</h3>
-              <p>UX Research & Design</p>
+              <h3>Mobile News App</h3>
+              <p>UI/UX Design</p>
             </div>
           </div>
 
           <div class="portfolio-item">
             <img
-              src="https://images.unsplash.com/photo-1543286386-713bdd548da4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80"
-              alt="E-commerce Project">
+              src="myportfolio/Education.jpg"
+              alt="UI design of Education Institute">
             <div class="portfolio-info">
-              <h3>E-commerce Platform</h3>
-              <p>UI/UX Design</p>
+              <h3>Education instiution UI design</h3>
+              <p>UI design of Education Institute</p>
             </div>
           </div>
         </div>
@@ -743,7 +743,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
 
           <div class="card">
             <h2>Higher Secondary Education</h2>
-            <p>Trinity International College, Nepal<br>
+            <p>Trinity International College, Nepal(2020)<br>
               Affiliated to National Examination Board (NEB)</p>
           </div>
 
