--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
 
           <div class="portfolio-item">
             <img
-              src="myportfolio/ecommerce.jpg"
+              src="ecommerce.jpg"
               alt="UI Design Project">
             <div class="portfolio-info">
               <h3>UI Design of E-commerce mobile and Desktop</h3>
@@ -704,7 +704,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
 
           <div class="portfolio-item">
             <img
-              src="myportfolio/News app copy.jpg"
+              src="News app copy.jpg"
               alt="Mobile App Project">
             <div class="portfolio-info">
               <h3>Mobile News App</h3>
@@ -714,7 +714,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
 
           <div class="portfolio-item">
             <img
-              src="myportfolio/Education.jpg"
+              src="Education.jpg"
               alt="UI design of Education Institute">
             <div class="portfolio-info">
               <h3>Education instiution UI design</h3>
