--- a/index.html
+++ b/index.html
@@ -693,9 +693,9 @@ Explored modern design styles and trends. Tried out components like dark mode, n
          
 
           <div class="portfolio-item">
-            <img
-              src="ecommerce.jpg"
-              alt="UI Design Project">
+           <a href="https://www.behance.net/gallery/230453605/Ecommerce-ui-Design-for-mobile-and-Desktop" target="_blank">
+  <img src="ecommerce.jpg" alt="UI Design Project">
+</a>
             <div class="portfolio-info">
               <h3>UI Design of E-commerce mobile and Desktop</h3>
               <p>Design</p>
@@ -703,9 +703,10 @@ Explored modern design styles and trends. Tried out components like dark mode, n
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="News app copy.jpg"
-              alt="Mobile App Project">
+            <a href="https://www.behance.net/gallery/230456311/News-apps-design" target="_blank">
+  <img src="News app copy.jpg" alt="Mobile App Project">
+</a>
+
             <div class="portfolio-info">
               <h3>Mobile News App</h3>
               <p>UI/UX Design</p>
@@ -713,9 +714,10 @@ Explored modern design styles and trends. Tried out components like dark mode, n
           </div>
 
           <div class="portfolio-item">
-            <img
-              src="Education.jpg"
-              alt="UI design of Education Institute">
+         <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
+  <img src="Education.jpg" alt="UI design of Education Institute">
+</a>
+
             <div class="portfolio-info">
               <h3>Education instiution UI design</h3>
               <p>UI design of Education Institute</p>
