--- a/index.html
+++ b/index.html
@@ -685,8 +685,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
         <div class="section-header">
           <div class="section-label">LATEST PORTFOLIO</div>
           <h3 class="section-title">Transforming Ideas into Exceptional</h3>
-          <p class="section-subtitle">Business consulting consultants provide expert advice and guide businesses to help
-            them improve their performance, efficiency, and organizational</p>
+          <p class="section-subtitle">UI/UX designers craft user-friendly digital experiences by designing intuitive interfaces that enhance usability, accessibility, and engagement across websites and applications. They combine creativity with user research to solve problems and improve the overall interaction between users and digital products.</p>
         </div>
 
         <div class="portfolio-grid">
@@ -776,7 +775,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
             </div>
 
             <div class="card">
-              <div class="section-label">2024-Present</div>
+              <div class="section-label"></div>
               <h2>UI/UX Design Bootcamp </h2>
               <h3>Trainee UI/UX Designer</h3>
               <p>Completed hands-on projects as part of structured learning (e.g., mobile app interfaces, landing pages,
