--- a/index.html
+++ b/index.html
@@ -685,7 +685,9 @@ Explored modern design styles and trends. Tried out components like dark mode, n
         <div class="section-header">
           <div class="section-label">LATEST PORTFOLIO</div>
           <h3 class="section-title">Transforming Ideas into Exceptional</h3>
-          <p class="section-subtitle">UI/UX designers craft user-friendly digital experiences by designing intuitive interfaces that enhance usability, accessibility, and engagement across websites and applications. They combine creativity with user research to solve problems and improve the overall interaction between users and digital products.</p>
+          <p class="section-subtitle">UI/UX designers craft user-friendly digital experiences by designing intuitive interfaces that enhance usability,
+            accessibility, and engagement across websites and applications. They combine creativity with user research to solve problems and improve the 
+            overall interaction between users and digital products.</p>
         </div>
 
         <div class="portfolio-grid">
