--- a/index.html
+++ b/index.html
@@ -731,9 +731,13 @@ Explored modern design styles and trends. Tried out components like dark mode, n
       <section id="Education" class="section">
         <div class="section-header">
           <div class="section-label">EDUCATION & EXPERIENCE</div>
-          <h3 class="section-title">Empowering Creativity through</h3>
-          <p class="section-subtitle">Business consulting consultants provide expert advice and guide businesses to help
-            them improve their performance, efficiency, and organizational</p>
+<h3 class="section-title">Empowering Creativity through</h3>
+<p class="section-subtitle">
+  UI/UX design focuses on creating seamless, engaging, and accessible digital experiences. 
+  With a strong foundation in user research and visual design, I craft intuitive interfaces 
+  that solve real-world problems and enhance user satisfaction.
+</p>
+
         </div>
 
         <h4>Education</h4>
