--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
         <h1>I'm Ang Lakpa Sherpa</h1>
         <h2>A <span>UI/UX designer</span></h2>
         <p>
-          A personal portfolio is a collection of your work, achievements, and skills that highlights your abilities and
-          professional growth. It serves as a visual representation of your journey and expertise.
+        Hi, I’m Anglakpa Sherpa — a passionate UI/UX designer and art enthusiast.
+I create clean, user-centered digital experiences that blend functionality with aesthetics. With a growing portfolio of design projects and a solid understanding of user research, wireframing, and visual design, I strive to design interfaces that are both intuitive and visually engaging. My journey reflects continuous learning, creative exploration, and a commitment to solving real-world problems through design.
         </p>
         <a href="https://www.behance.net/anglakpasherpa" target="_blank">
   <button class="btn">
