--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <aside class="sidebar">
       <div class="profile">
         <img
-          src="https://media.licdn.com/dms/image/v2/D4D03AQHLNtkOsWQEIQ/profile-displayphoto-crop_800_800/B4DZe5dljyGYAI-/0/1751163232208?e=1758153600&v=beta&t=5Wgh4DinY-Rgb0bveFD4JzSEGaFO5QJcMU5YJfzazlE"
+          src="https://photos.fife.usercontent.google.com/pw/AP1GczMdhpgFbXIry7O9frQ29dix1yNAnm2yRsAJtTMOS5-MmgxtPjuy9qaw=w1080-h1080-s-no-gm?authuser=0"
           alt="Ang Lakpa Sherpa">
       </div>
 
