--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <aside class="sidebar">
       <div class="profile">
         <img
-          src="https://photos.fife.usercontent.google.com/pw/AP1GczMdhpgFbXIry7O9frQ29dix1yNAnm2yRsAJtTMOS5-MmgxtPjuy9qaw=w1080-h1080-s-no-gm?authuser=0"
+          src="anglakpa.JPG"
           alt="Ang Lakpa Sherpa">
       </div>
 
