--- a/index.html
+++ b/index.html
@@ -769,15 +769,11 @@ Explored modern design styles and trends. Tried out components like dark mode, n
               <div class="section-label">2025-present</div>
              
               <h3>UI/UX Designer</h3>
-              <p>Designed and prototyped responsive user interfaces using tools like Figma.
-
-                Focused on user-centered design principles to improve user experience.
-
-                Created design systems and style guides for consistency across platforms.
-
-                Worked on wireframes, mockups, and user flows for personal or client projects.
-
-                Conducted basic user testing and incorporated feedback into design iterations.</p>
+             <p>
+  Designed and prototyped responsive user interfaces using Figma. Focused on user-centered design principles to improve the overall user experience. 
+  Created design systems, reusable components, and style guides to maintain consistency across projects. Conducted basic user research, prepared wireframes, 
+  and transformed them into polished high-fidelity designs. Worked on mobile and web layouts, ensuring accessibility, clarity, and strong visual hierarchy.
+</p>
             </div>
 
            
@@ -910,7 +906,6 @@ Explored modern design styles and trends. Tried out components like dark mode, n
               <li><a href="#">About Me</a></li>
               <li><a href="#">Services</a></li>
               <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Testimonials</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
