--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ang Lakpa Sherpa - UI/UX Designer Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
   <style>
     :root {
-      --primary-color: #fe0950;
-      --dark-bg: #121212;
-      --card-bg: #1f1f1f;
-      --section-bg: #222;
-      --text-light: #ccc;
-      --text-dark: #aaa;
+      --primary-color: #8c6ff0; /* Royal Purple */
+      --secondary-color: #e0c3fc; /* Lavender Tint */
+      --background-color: #faf7ff; /* Soft Off-white */
+      --text-dark: #2a2a2a; /* Charcoal */
+      --text-light: #5a5a5a;
+      --accent-color: #f2a900; /* Gold */
       --sidebar-width: 280px;
+
+      --card-bg: #ffffff;
+      --section-bg: #ffffff;
     }
 
     * {
@@ -25,8 +29,8 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--dark-bg);
-      color: white;
+      background-color: var(--background-color);
+      color: var(--text-dark);
       min-height: 100vh;
       overflow-x: hidden;
     }
@@ -46,6 +50,7 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.08);
       z-index: 1000;
       overflow-y: auto;
     }
@@ -53,7 +58,7 @@
     .profile img {
       width: 170px;
       border-radius: 50%;
-      border: 4px solid #444;
+      border: 4px solid var(--secondary-color);
       object-fit: cover;
       margin-bottom: 20px;
     }
@@ -67,16 +72,17 @@
       display: flex;
       align-items: center;
       padding: 12px 20px;
-      color: var(--text-light);
+      color: var(--text-dark);
       cursor: pointer;
       font-weight: bold;
       transition: all 0.3s ease;
+      border-radius: 8px;
     }
 
     nav ul li:hover,
     nav ul li.active {
       color: var(--primary-color);
-      background: rgba(254, 9, 80, 0.1);
+      background: var(--secondary-color);
     }
 
     nav ul li i {
@@ -96,12 +102,13 @@
       font-weight: bold;
       font-size: 14px;
       margin-bottom: 10px;
+      color: var(--text-dark);
     }
 
     .socials hr {
       margin: 20px 0;
       width: 100%;
-      border-color: #444;
+      border-color: var(--secondary-color);
     }
 
     .media {
@@ -110,12 +117,8 @@
       gap: 15px;
     }
 
-    .media li {
-      list-style: none;
-    }
-
     .media a {
-      color: var(--text-light);
+      color: var(--text-dark);
       font-size: 20px;
       transition: color 0.3s ease;
     }
@@ -128,7 +131,7 @@
     .main-content {
       margin-left: var(--sidebar-width);
       padding: 40px;
-      background-color: #282828;
+      background-color: var(--background-color);
       min-height: 100vh;
     }
 
@@ -154,11 +157,12 @@
       font-size: 36px;
       font-weight: bold;
       margin: 10px 0;
+      color: var(--text-dark);
     }
 
     .section-subtitle {
       font-size: 18px;
-      color: var(--text-dark);
+      color: var(--text-light);
       max-width: 600px;
       margin: 0 auto;
       line-height: 1.6;
@@ -194,7 +198,7 @@
 
     .hero p {
       font-size: 18px;
-      color: var(--text-dark);
+      color: var(--text-light);
       margin-top: 20px;
       line-height: 1.6;
       max-width: 500px;
@@ -215,260 +219,76 @@
     }
 
     .btn:hover {
-      background-color: #c00a42;
+      background-color: #6f52d4;
       transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(254, 9, 80, 0.3);
+      box-shadow: 0 5px 15px rgba(140, 111, 240, 0.3);
     }
 
-    /* Features */
-    .features-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
+    /* Cards */
     .card {
-      background-color: var(--section-bg);
+      background-color: var(--card-bg);
       padding: 30px;
       border-radius: 15px;
-      border-bottom: 3px solid var(--primary-color);
-      border-right: 3px solid var(--primary-color);
+      border-left: 5px solid var(--primary-color);
       transition: all 0.3s ease;
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
     }
 
     .card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    .card h2 {
-      font-size: 24px;
-      margin-bottom: 15px;
-    }
-
-    .card .number {
-      color: var(--primary-color);
-      font-size: 20px;
-      margin-right: 5px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     }
 
     /* Portfolio */
-    .portfolio-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .portfolio-item {
-      border-radius: 15px;
-      overflow: hidden;
-      position: relative;
-      transition: all 0.3s ease;
-    }
-
     .portfolio-item img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      display: block;
-      transition: transform 0.5s ease;
-    }
-
-    .portfolio-item:hover img {
-      transform: scale(1.05);
+      border-radius: 15px;
     }
 
     .portfolio-info {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      transform: translateY(100%);
-      transition: transform 0.3s ease;
-    }
-
-    .portfolio-item:hover .portfolio-info {
-      transform: translateY(0);
-    }
-
-    /* Education & Experience */
-    .education-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .experience-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 40px;
-      margin-top: 40px;
-      align-items: center;
-    }
-
-    .experience-img {
-      width: 100%;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Pricing */
-    .pricing-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .pricing-card {
-      background-color: var(--section-bg);
-      padding: 30px;
-      border-radius: 15px;
-      border-bottom: 3px solid var(--primary-color);
-      border-right: 3px solid var(--primary-color);
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    .pricing-card.mid {
-      transform: scale(1.05);
-      background-color: #2a2a2a;
-    }
-
-    .pricing-card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    .pricing-card.mid:hover {
-      transform: translateY(-10px) scale(1.05);
-    }
-
-    .price {
-      font-size: 40px;
-      font-weight: bold;
-      margin: 15px 0;
-    }
-
-    .pricing-features {
-      list-style: none;
-      margin: 20px 0;
-      text-align: left;
-    }
-
-    .pricing-features li {
-      padding: 10px 0;
-      border-bottom: 1px solid #444;
-    }
-
-    .pricing-features li:last-child {
-      border-bottom: none;
+      background: rgba(255, 255, 255, 0.8);
+      color: var(--text-dark);
     }
 
     /* Contact */
-    .contact-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 40px;
-      margin-top: 40px;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    .form-row {
-      display: flex;
-      gap: 20px;
-    }
-
-    .form-row .form-group {
-      flex: 1;
-    }
-
     input,
     textarea {
-      width: 100%;
-      padding: 15px;
-      border: 1px solid #444;
-      border-radius: 6px;
-      background-color: #222;
-      color: white;
-      font-size: 16px;
-      transition: all 0.3s ease;
+      background-color: var(--card-bg);
+      border: 1px solid #ddd;
+      color: var(--text-dark);
     }
 
     input:focus,
     textarea:focus {
-      outline: none;
       border-color: var(--primary-color);
-      box-shadow: 0 0 0 2px rgba(254, 9, 80, 0.2);
-    }
-
-    textarea {
-      min-height: 150px;
-      resize: vertical;
+      box-shadow: 0 0 0 2px rgba(140, 111, 240, 0.2);
     }
 
     /* Footer */
     .footer {
-      background-color: #121212;
+      background-color: #ffffff;
       padding: 60px 0 30px;
       margin-top: 60px;
-    }
-
-    .footer-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
+      border-top: 1px solid #eee;
     }
 
     .footer-column h4 {
-      margin-bottom: 20px;
-      font-size: 20px;
-    }
-
-    .footer-links {
-      list-style: none;
-    }
-
-    .footer-links li {
-      margin-bottom: 10px;
+      color: var(--text-dark);
     }
 
     .footer-links a {
-      color: var(--text-dark);
-      text-decoration: none;
-      transition: color 0.3s ease;
+      color: var(--text-light);
     }
 
     .footer-links a:hover {
       color: var(--primary-color);
     }
 
-    .contact-info {
-      display: flex;
-      align-items: center;
-      margin-bottom: 15px;
-    }
-
     .contact-info i {
-      margin-right: 15px;
-      color: var(--primary-color);
-      font-size: 20px;
+      color: var(--accent-color);
     }
 
     .copyright {
-      text-align: center;
-      margin-top: 50px;
-      color: var(--text-dark);
-      padding-top: 20px;
-      border-top: 1px solid #333;
+      color: var(--text-light);
     }
 
     /* Responsive */
@@ -480,46 +300,16 @@
 
       .profile img {
         width: 50px;
-        border-width: 2px;
       }
 
       nav ul li span {
         display: none;
       }
 
-      nav ul li i {
-        margin-right: 0;
-        font-size: 20px;
-      }
-
-      .socials p,
-      .socials hr {
-        display: none;
-      }
-
-      .media {
-        flex-direction: column;
-        gap: 10px;
-      }
-
       .main-content {
         margin-left: 70px;
       }
-
-      .hero h1 {
-        font-size: 36px;
-      }
-
-      .hero h2 {
-        font-size: 24px;
-      }
     }
-
-    a {
-  text-decoration: none;
-   color: inherit;
-}
-
 
     @media (max-width: 768px) {
       .sidebar {
@@ -535,54 +325,15 @@
         gap: 20px;
       }
 
-      .profile img {
-        width: 70px;
-        margin-bottom: 0;
-      }
-
       nav ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
       }
 
-      nav ul li {
-        padding: 10px;
-      }
-
-      .socials {
-        display: none;
-      }
-
       .main-content {
         margin-left: 0;
         padding: 20px;
-      }
-
-      .section {
-        padding: 40px 0;
-      }
-
-      .section-title {
-        font-size: 28px;
-      }
-
-      .experience-container,
-      .contact-container {
-        grid-template-columns: 1fr;
-      }
-
-      .experience-img {
-        max-width: 100%;
-      }
-
-      .form-row {
-        flex-direction: column;
-        gap: 0;
-      }
-
-      .pricing-card.mid {
-        transform: scale(1);
       }
     }
   </style>
