--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@ Explored modern design styles and trends. Tried out components like dark mode, n
             </div>
           </div>
 
+ <div class="portfolio-item">
+            <a href="https://www.behance.net/gallery/231456319/real-estate-website" target="_blank">
+  <img src="News app copy.jpg" alt="Mobile App Project">
+</a>
+
+            <div class="portfolio-info">
+              <h3>Realstate Website</h3>
+              <p>UI/UX Design of Realstate</p>
+            </div>
+
+ <div class="portfolio-item">
+            <a href="https://www.behance.net/gallery/235143029/Parallel-Effect" target="_blank">
+  <img src="News app copy.jpg" alt="Mobile App Project">
+</a>
+
+            <div class="portfolio-info">
+              <h3>Car Website</h3>
+              <p>UI/UX Design of using parallel effect</p>
+            </div>
+
           <div class="portfolio-item">
          <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
   <img src="Education.jpg" alt="UI design of Education Institute">
