--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
               <h3>Realstate Website</h3>
               <p>UI/UX Design of Realstate</p>
             </div>
+ </div>
 
  <div class="portfolio-item">
             <a href="https://www.behance.net/gallery/235143029/Parallel-Effect" target="_blank">
@@ -145,6 +146,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
               <h3>Car Website</h3>
               <p>UI/UX Design of using parallel effect</p>
             </div>
+ </div>
 
           <div class="portfolio-item">
          <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
