--- a/index.html
+++ b/index.html
@@ -91,75 +91,79 @@ Explored modern design styles and trends. Tried out components like dark mode, n
           </div>
         </div>
       </section>
+      
+   <!-- Portfolio Section -->
+<section id="portfolio" class="section">
+  <div class="section-header">
+    <div class="section-label">LATEST PORTFOLIO</div>
+    <h3 class="section-title">Transforming Ideas into Exceptional</h3>
+    <p class="section-subtitle">
+      UI/UX designers craft user-friendly digital experiences by designing intuitive interfaces 
+      that enhance usability, accessibility, and engagement. We combine creativity with user 
+      research to solve problems and improve interactions between users and digital products.
+    </p>
+  </div>
 
-      <!-- Portfolio Section -->
-      <section id="Portfolio" class="section">
-        <div class="section-header">
-          <div class="section-label">LATEST PORTFOLIO</div>
-          <h3 class="section-title">Transforming Ideas into Exceptional</h3>
-          <p class="section-subtitle">UI/UX designers craft user-friendly digital experiences by designing intuitive interfaces that enhance usability,
-            accessibility, and engagement across websites and applications. They combine creativity with user research to solve problems and improve the 
-            overall interaction between users and digital products.</p>
-        </div>
+  <div class="portfolio-grid">
 
-        <div class="portfolio-grid">
-         
+    <!-- Item 1 -->
+    <div class="portfolio-item">
+      <a href="https://www.behance.net/gallery/230453605/Ecommerce-ui-Design-for-mobile-and-Desktop" target="_blank">
+        <img src="ecommerce.jpg" alt="E-commerce UI Design Project">
+      </a>
+      <div class="portfolio-info">
+        <h3>E-commerce UI Design (Mobile & Desktop)</h3>
+        <p>UI/UX Design</p>
+      </div>
+    </div>
 
-          <div class="portfolio-item">
-           <a href="https://www.behance.net/gallery/230453605/Ecommerce-ui-Design-for-mobile-and-Desktop" target="_blank">
-  <img src="ecommerce.jpg" alt="UI Design Project">
-</a>
-            <div class="portfolio-info">
-              <h3>UI Design of E-commerce mobile and Desktop</h3>
-              <p>Design</p>
-            </div>
-          </div>
+    <!-- Item 2 -->
+    <div class="portfolio-item">
+      <a href="https://www.behance.net/gallery/230456311/News-apps-design" target="_blank">
+        <img src="news-app.jpg" alt="News Mobile App UI Design">
+      </a>
+      <div class="portfolio-info">
+        <h3>Mobile News App</h3>
+        <p>UI/UX Design</p>
+      </div>
+    </div>
 
-          <div class="portfolio-item">
-            <a href="https://www.behance.net/gallery/230456311/News-apps-design" target="_blank">
-  <img src="News app copy.jpg" alt="Mobile App Project">
-</a>
+    <!-- Item 3 -->
+    <div class="portfolio-item">
+      <a href="https://www.behance.net/gallery/231456319/real-estate-website" target="_blank">
+        <img src="real-estate.jpg" alt="Real Estate Website Design">
+      </a>
+      <div class="portfolio-info">
+        <h3>Real Estate Website</h3>
+        <p>UI/UX Design</p>
+      </div>
+    </div>
 
-            <div class="portfolio-info">
-              <h3>Mobile News App</h3>
-              <p>UI/UX Design</p>
-            </div>
-          </div>
+    <!-- Item 4 -->
+    <div class="portfolio-item">
+      <a href="https://www.behance.net/gallery/235143029/Parallel-Effect" target="_blank">
+        <img src="car-website.jpg" alt="Car Website With Parallax Effect">
+      </a>
+      <div class="portfolio-info">
+        <h3>Car Website</h3>
+        <p>UI/UX Design with Parallax Effect</p>
+      </div>
+    </div>
 
- <div class="portfolio-item">
-            <a href="https://www.behance.net/gallery/231456319/real-estate-website" target="_blank">
-  <img src="News app copy.jpg" alt="Mobile App Project">
-</a>
+    <!-- Item 5 -->
+    <div class="portfolio-item">
+      <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
+        <img src="education.jpg" alt="Education Consultant Web UI Design">
+      </a>
+      <div class="portfolio-info">
+        <h3>Education Institution UI Design</h3>
+        <p>UI/UX Design</p>
+      </div>
+    </div>
 
-            <div class="portfolio-info">
-              <h3>Realstate Website</h3>
-              <p>UI/UX Design of Realstate</p>
-            </div>
- </div>
+  </div>
+</section>
 
- <div class="portfolio-item">
-            <a href="https://www.behance.net/gallery/235143029/Parallel-Effect" target="_blank">
-  <img src="News app copy.jpg" alt="Mobile App Project">
-</a>
-
-            <div class="portfolio-info">
-              <h3>Car Website</h3>
-              <p>UI/UX Design of using parallel effect</p>
-            </div>
- </div>
-
-          <div class="portfolio-item">
-         <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
-  <img src="Education.jpg" alt="UI design of Education Institute">
-</a>
-
-            <div class="portfolio-info">
-              <h3>Education instiution UI design</h3>
-              <p>UI design of Education Institute</p>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <!-- Education Section -->
       <section id="Education" class="section">
