--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Explored modern design styles and trends. Tried out components like dark mode, n
     <!-- Item 2 -->
     <div class="portfolio-item">
       <a href="https://www.behance.net/gallery/230456311/News-apps-design" target="_blank">
-        <img src="news-app.jpg" alt="News Mobile App UI Design">
+        <img src="News app copy.jpg" alt="News Mobile App UI Design">
       </a>
       <div class="portfolio-info">
         <h3>Mobile News App</h3>
