--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     <!-- Item 3 -->
                     <div class="portfolio-item">
                         <a href="https://www.behance.net/gallery/231456319/real-estate-website" target="_blank">
-                            <img src="real-estate.jpg" alt="Real Estate Website Design">
+                            <img src="zav.png" alt="Real Estate Website Design">
                         </a>
                         <div class="portfolio-info">
                             <h3>Real Estate Website</h3>
