--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                     <!-- Item 5 -->
                     <div class="portfolio-item">
                         <a href="https://www.behance.net/gallery/230463201/Education-Consultant-Ui-design" target="_blank">
-                            <img src="education.jpg" alt="Education Consultant Web UI Design">
+                            <img src="consultancy.png" alt="Education Consultant Web UI Design">
                         </a>
                         <div class="portfolio-info">
                             <h3>Education Institution UI Design</h3>
