--- a/index.html
+++ b/index.html
@@ -776,10 +776,10 @@
             <section id="Contact" class="section">
                 <div class="section-header">
                     <div class="section-label">GET IN TOUCH</div>
-                    <h3 class="section-title">Let's Work Together</h3>
+                    <h3 class="section-title"></h3>
                     <p class="section-subtitle">
-                        Have a project idea, collaboration request, or just want to say hello?  
-                        Drop a message—I usually reply within a few hours.
+                        Have a project idea, or just want to say hello?  
+                        Drop a message. I usually reply within a few hours.
                     </p>
                 </div>
 
