Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="google-site-verification" content="c7Pb2vGDHgJcVgwAWxX9m73tzzAIhtA-Rv1UZLw87C0" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-536VQ3FMP5"></script>
 <script>
