--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="robots" content="index, follow">
+
     <meta name="description" content="Hire a professional UI UX designer in Nepal. Portfolio, case studies, and freelance services available.">
 
     <meta name="google-site-verification" content="c7Pb2vGDHgJcVgwAWxX9m73tzzAIhtA-Rv1UZLw87C0" />
