--- a/index.html
+++ b/index.html
@@ -676,6 +676,18 @@
                 <div class="portfolio-grid">
                     <!-- Item 1 -->
                     <div class="portfolio-item">
+                        <a href="https://www.behance.net/gallery/240889469/learning-institution-website"
+                            target="_blank">
+                            <img src="ecommerce.jpg" alt="institution design">
+                        </a>
+                        <div class="portfolio-info">
+                            <h3>Institution design</h3>
+                            <p>UI/UX Design</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 1 -->
+                    <div class="portfolio-item">
                         <a href="https://www.behance.net/gallery/230453605/Ecommerce-ui-Design-for-mobile-and-Desktop"
                             target="_blank">
                             <img src="ecommerce.jpg" alt="E-commerce UI Design Project">
