Update portfolio item image source

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <div class="portfolio-item">
                         <a href="https://www.behance.net/gallery/240889469/learning-institution-website"
                             target="_blank">
-                            <img src="ecommerce.jpg" alt="institution design">
+                            <img src="soc mockups.png" alt="institution design">
                         </a>
                         <div class="portfolio-info">
                             <h3>Institution design</h3>
